# 500-bai-code-thieu-nhi-cho-dan-intern-dien-tu

./: .gitignore  README.md
15_ESP32_BLE_MOUSE/: platformio.ini
15_ESP32_BLE_MOUSE/src/: main.cpp
16_ESP32_MONITOR/: platformio.ini
16_ESP32_MONITOR/src/: main.cpp
17_MPU6050_MATRIX4x32/: platformio.ini
17_MPU6050_MATRIX4x32/src/: main.cpp
20_USB_Keyboard_to_BLE_Keyboard/: CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3-devkitc-1
20_USB_Keyboard_to_BLE_Keyboard/src/: CMakeLists.txt  idf_component.yml  main.c
20_USB_Keyboard_to_BLE_Keyboard/src/ble_hid/: ble_hid.c  ble_hid.h
20_USB_Keyboard_to_BLE_Keyboard/src/led_rgb/: led_rgb.c  led_rgb.h
20_USB_Keyboard_to_BLE_Keyboard/src/usb_hid/: usb_hid.c  usb_hid.h
